# audio-speech

./: .gitignore  app.py  avad.py  huss.md  huss.py  main.py  pyproject.toml  requirements.txt  ring.html  run.py  stt.py  tts.py
templates/: hume.html  index.html  ring_ui.html
